bug: add titleLimit and bug in styling overflow scroll card, the scroll horizontal

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,6 +45,11 @@
   padding: 0 10px 0 10px;
 }
 
+.title-limit {
+  color: #f5f5f5;
+  text-align: end;
+}
+
 #bodyInput {
   border: 1px solid #f5f5f5;
   margin-top: 10px;
@@ -160,5 +165,17 @@
 }
 
 .archive-notes {
-  margin-top : 32px;
+  margin-top: 32px;
+}
+
+@media only screen and (max-width: 425px) {
+  .card {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .notes {
+    justify-content: center;
+  }
 }
